[package]
name = "fibonacci_heap"
version = "0.7.2"
edition = "2021"
authors = ["<xvi-xv-xii-ix-xxii-ix-xiv <xvi.xv.xii.ix.xxii.ix.xiv@gmail.com>"]
description = "A Fibonacci Heap implementation in Rust"
license = "MIT"
repository = "https://github.com/xvi-xv-xii-ix-xxii-ix-xiv/fibonacci_heap"
documentation = "https://docs.rs/fibonacci_heap"
homepage = "https://github.com/xvi-xv-xii-ix-xxii-ix-xiv/fibonacci_heap"
categories = ["data-structures", "algorithms"]
keywords = ["heap", "priority-queue", "fibonacci-heap", "rust"]
readme = "README.md"
exclude = ["/target", "/.git", "/*.iml", "/*.lock"]

[dependencies]

[dev-dependencies]
criterion = "0.5.1"

[features]
default = []

[lib]
name = "fibonacci_heap"
path = "lib.rs"
crate-type = ["lib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
incremental = false

[profile.bench]
opt-level = 3

[[bench]]
name = "fibonacci_heap_benchmark"
path = "benches/fibonacci_heap_benchmark.rs"
harness = false

[workspace]
members = ["."]
