[package]
name = "fibonacci_heap"
version = "0.8.1"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance Fibonacci Heap implementation in Rust"
license = "MIT"
repository = "https://github.com/xvi-xv-xii-ix-xxii-ix-xiv/fibonacci_heap"
documentation = "https://docs.rs/fibonacci_heap"
homepage = "https://github.com/xvi-xv-xii-ix-xxii-ix-xiv/fibonacci_heap"
categories = ["data-structures", "algorithms"]
keywords = ["heap", "priority-queue", "fibonacci-heap", "rust"]
readme = "README.md"
exclude = ["/target", "/.git", "/*.iml", "/*.lock"]

[dependencies]

[dev-dependencies]
criterion = "0.5"

[features]
default = ["concurrent"]
concurrent = []

[lib]
name = "fibonacci_heap"
path = "src/lib.rs"
crate-type = ["lib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
incremental = false

[profile.bench]
opt-level = 3

[[bench]]
name = "fibonacci_heap_benchmark"
path = "benches/fibonacci_heap_benchmark.rs"
harness = false
